--- a/index.html
+++ b/index.html
@@ -1,1 +1,80 @@
+!DOCTYPE html>
+<html>
+  <head>
+    <title>Zach Badgerow's Portfolio</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" href="./assets/css/style.css" />
+  </head>
+  <body>
+    <!-- Header -->
+    <header>
+      <h1>Welcome to my site!</h1>
+      <p>
+        Hey! I'm amateur web developer Zach Badgerow. Check out my stuff!
+      </p>
+    </header>
+
+    <!-- Navbar -->
+    <nav>
+      <a href="#">Camera</a>
+      <a href="#">Tablet</a>
+      <a href="#">Toilet Paper</a>
+      <a href="#">Wooden Spoons</a>
+    </nav>
+
+    <!-- Body -->
+    <main>
+      <!-- Sidebar -->
+      <aside>
+        <h2>About Me!</h2>
+        <p>I've always been tech-oriented and I love to solve problems!</p>
+        <p>
+          <img src="C:\Users\zachb\OneDrive\Desktop\bootcamp\mod-two-challenge\assets\images\samurai-zach.jpg">
+        </p>
+      </aside>
+      <!-- Product Cards -->
+      <div class="products">
+        <section class="card">
+          <header>Sample Application 1</header>
+          <a href="https://www.zombo.com/">
+            <img src="./assets/images/camera.jpg" alt="black camera">  
+          </a>
+          <p>Placeholder</p>
+        </section>
+        <section class="card">
+          <header>Sample Application 2</header>
+        <a href="https://artsandculture.google.com/experiment/blob-opera/AAHWrq360NcGbw?hl=en&cp=e30.">
+          <img src="./assets/images/tablet.jpg" alt="tablet held in hands">
+        </a>
+          <p>Placeholder</p>
+        </section>
+        <section class="card">
+          <header>Sample Application 3</header>
+        <a href="https://www.amazon.com/toilet-paper/s?k=toilet+paper">
+            <img src="./assets/images/toilet-paper.jpg" alt="rolls of toilet paper in a basket">
+        </a>
+          <p>Placeholder</p>
+        </section>
+        <section class="card">
+          <header>Sample Application 4</header>
+          <a href="https://en.wikipedia.org/wiki/Spoon_(band)/">
+            <img
+            src="./assets/images/wooden-spoons.jpg"
+            alt="4 wooden spoons with different seasonings">
+          </a>
+          <p>Placeholder</p>
+        </section>
+      </div>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+      <h2>Contact Me</h2>
+      <h3>
+        Cell Phone: (804)-229-9596  Email: zachbadgerow@hotmail.com
+      </h3>
+    </footer>
+  </body>
+</html>
 
